[package]
name = "nekton"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
typetag = "0.1"

env_logger = { version = "0.6", optional = true }
futures = { version = "0.1", optional = true }
grpcio = { version = "0.4", optional = true }
http = { version = "0.1", optional = true }
protobuf = { version = "2.8", optional = true }
rdkafka = { version = "0.21", optional = true }
rdkafka-sys = { version = "1.0", optional = true }
regex = { version = "1.2", optional = true }
tiny_http = { version = "0.6", optional = true }
uuid = { version = "0.7", features = ["v4"], optional = true }

[build-dependencies]
protoc-grpcio = { version = "1.0", optional = true }

[features]
default = ["kafka", "regexp", "http_server", "env_log"]
kafka = ["futures", "rdkafka", "rdkafka-sys"]
proximo = ["futures", "grpcio", "protobuf", "protoc-grpcio", "uuid"]
regexp = ["regex"]
http_server = ["http", "tiny_http"]
env_log = ["env_logger"]
