[package]
name = "nekton"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "nekton"
path = "src/lib.rs"

[[bin]]
name = "nekton_bin"
path = "src/main.rs"

[dependencies]
failure = "0.1"
futures = "0.1"
log = "0.4"
prometheus = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = "0.1"
typetag = "0.1"

bytes = { version = "0.4", optional = true }
env_logger = { version = "0.6", optional = true }
http = { version = "0.1", optional = true }
hyper = { version = "0.12", optional = true }
protobuf = { version = "2.8", optional = true }
rdkafka = { version = "0.21", optional = true }
rdkafka-sys = { version = "1.0", optional = true }
prost = { version = "0.5", optional = true }
regex = { version = "1.2", optional = true }
tiny_http = { version = "0.6", optional = true }
tower-grpc = { version = "0.1", optional = true }
tower-grpc-build = { version = "0.1", optional = true }
tower-hyper = { version = "0.1", optional = true }
tower-util = { version = "0.1", optional = true }
uuid = { version = "0.7", features = ["v4"], optional = true }

[build-dependencies]
tower-grpc-build = { version = "0.1", optional = true }

[features]
default = ["env_log", "http_server", "regexp", "unstable"]
unstable = ["kafka", "proximo"]
kafka = ["rdkafka", "rdkafka-sys"]
proximo = ["bytes", "hyper", "prost", "tower-grpc", "tower-grpc-build", "tower-hyper", "tower-util", "uuid"]
regexp = ["regex"]
http_server = ["http", "tiny_http"]
env_log = ["env_logger"]
